--- a/cypress/fixtures/fireboltCalls/discoverylaunch.json
+++ b/cypress/fixtures/fireboltCalls/discoverylaunch.json
@@ -1,113 +1,166 @@
 {
     "LAUNCH_APP_WITH_NULL_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_NULL_INTENT"
+        "params": "DISCOVERYLAUNCH_NULL_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_HOME_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_HOME_INTENT"
+        "params": "DISCOVERYLAUNCH_HOME_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYBACK_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYBACK_INTENT"
+        "params": "DISCOVERYLAUNCH_PLAYBACK_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_ENTITY_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_ENTITY_INTENT"
+        "params": "DISCOVERYLAUNCH_ENTITY_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_INTENT"
+        "params": "DISCOVERYLAUNCH_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_SEARCH_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_SEARCH_INTENT"
+        "params": "DISCOVERYLAUNCH_SEARCH_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_SECTION_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_SECTION_INTENT"
+        "params": "DISCOVERYLAUNCH_SECTION_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_TUNE_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_TUNE_INTENT"
+        "params": "DISCOVERYLAUNCH_TUNE_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYENTITY_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT"
+        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_CONCERT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_CONCERT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_CONCERT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_SPORTINGEVENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_SPORTINGEVENT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_SPORTINGEVENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_PREVIEW": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_PREVIEW"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_PREVIEW",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_OTHER": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_OTHER"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_OTHER",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_ADVERTISEMENT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_ADVERTISEMENT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_ADVERTISEMENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_MUSICVIDEO": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_MUSICVIDEO"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_MUSICVIDEO",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_MINISODE": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_MINISODE"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_MINISODE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_EXTRA": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_EXTRA"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_PROGRAMTYPE_EXTRA",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_MOVIE": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_MOVIE"
+        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_MOVIE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_EPISODE": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_EPISODE"
+        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_EPISODE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_CONCERT": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_CONCERT"
+        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITH_PROGRAMTYPE_CONCERT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYENTITY_INTENT_WITHOUT_OPTIONS": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITHOUT_OPTIONS"
+        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITHOUT_OPTIONS",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYBACK_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYBACK_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE"
+        "params": "DISCOVERYLAUNCH_PLAYBACK_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYENTITY_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE_FOR_MOVIEENTITY": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE_FOR_MOVIEENTITY"
+        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE_FOR_MOVIEENTITY",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYENTITY_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE_FOR_TVEPISODEENTITY": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE_FOR_TVEPISODEENTITY"
+        "params": "DISCOVERYLAUNCH_PLAYENTITY_INTENT_WITHOUT_ENTITYTYPE_AND_WITH_PROGRAMTYPE_MOVIE_FOR_TVEPISODEENTITY",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
-
     "TRUE_FOR_DISCOVERYLAUNCH": {
         "method": "discovery.launch",
         "validationJsonPath": "result",
@@ -359,21 +412,23 @@
         "params": "DISCOVERYLAUNCH_SEARCH_INTENT_INT_DATA",
         "expected": "error"
     },
-
     "INVALID_PARAMETERS_FOR_DISCOVERYLAUNCH": {
         "method": "discovery.launch",
         "validationJsonPath": "result",
         "expected": "INVALID_TYPE_PARAMS",
         "expectingError": true
     },
-
     "LAUNCH_APP_WITH_NULL_INTENT_SOURCE": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE"
+        "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYBACK_INTENT_SOURCE": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYBACK_INTENT_SOURCE"
+        "params": "DISCOVERYLAUNCH_PLAYBACK_INTENT_SOURCE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "DISCOVERY_ONNAVIGATETO": {
         "method": "discovery.onNavigateTo"
@@ -393,71 +448,105 @@
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_CONCERT":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_CONCERT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_CONCERT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_SPORTINGEVENT":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_SPORTINGEVENT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_SPORTINGEVENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_PREVIEW":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_PREVIEW"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_PREVIEW",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_OTHER":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_OTHER"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_OTHER",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_ADVERTISEMENT":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_ADVERTISEMENT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_ADVERTISEMENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_MUSICVIDEO":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_MUSICVIDEO"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_MUSICVIDEO",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_MINISODE":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_MINISODE"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_MINISODE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_EXTRA":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_EXTRA"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_SONG_PROGRAMTYPE_EXTRA",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_CONCERT":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_CONCERT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_CONCERT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_SPORTINGEVENT":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_SPORTINGEVENT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_SPORTINGEVENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_PREVIEW":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_PREVIEW"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_PREVIEW",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_OTHER":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_OTHER"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_OTHER",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_ADVERTISEMENT":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_ADVERTISEMENT"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_ADVERTISEMENT",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_MUSICVIDEO":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_MUSICVIDEO"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_MUSICVIDEO",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_MINISODE":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_MINISODE"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_MINISODE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_EXTRA":{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_EXTRA"
+        "params": "DISCOVERYLAUNCH_PLAYQUERY_INTENT_WITH_MUSICTYPE_ALBUM_PROGRAMTYPE_EXTRA",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_INVALID_APPID_VALUE" : {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_LAUNCH_APP_WITH_INVALID_APPID_VALUE"
+        "params": "DISCOVERYLAUNCH_LAUNCH_APP_WITH_INVALID_APPID_VALUE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_INVALID_APPID_TYPE" : {
         "method": "discovery.launch",
@@ -466,11 +555,15 @@
     },
     "LAUNCH_APP_WITH_RANDOM_STRING_SOURCE": {
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_LAUNCH_APP_WITH_RANDOM_STRING_SOURCE"
+        "params": "DISCOVERYLAUNCH_LAUNCH_APP_WITH_RANDOM_STRING_SOURCE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_SEARCH_INTENT_SOURCE" :{
         "method": "discovery.launch",
-        "params": "DISCOVERYLAUNCH_LAUNCH_APP_WITH_SEARCH_INTENT_SOURCE"
+        "params": "DISCOVERYLAUNCH_LAUNCH_APP_WITH_SEARCH_INTENT_SOURCE",
+        "validationJsonPath": "result",
+        "expected": "TRUE"
     },
     "LAUNCH_APP_WITH_SEARCH_INTENT_INT_SOURCE": {
         "method": "discovery.launch",
