--- a/cypress/fixtures/fireboltCalls/discoverylaunch.json
+++ b/cypress/fixtures/fireboltCalls/discoverylaunch.json
@@ -900,5 +900,236 @@
     "LAUNCH_APP_WITH_EXIT_INTENT":{
         "method": "discovery.launch",
         "params": "DISCOVERYLAUNCH_EXIT_INTENT" 
+    },
+    "ONNAVIGATETO_WITH_POWER_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_POWER_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_VOLUME_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_VOLUME_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_MUTE_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_MUTE_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_CHANNEL_INTENT_WITH_CHANNEL_NEXT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_CHANNEL_INTENT_WITH_CHANNEL_NEXT_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_CHANNEL_INTENT_WITH_CHANNEL_PREVIOUS": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_CHANNEL_INTENT_WITH_CHANNEL_PREVIOUS_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_PAUSE_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_PAUSE_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_RESUME_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_RESUME_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_REPLAY_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_REPLAY_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_STOP_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_STOP_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SEEK_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SEEK_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SEEK_INTENT_WITH_RELATIVE_TRUE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SEEK_INTENT_WITH_RELATIVE_TRUE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_TRICK_PLAY_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_TRICK_PLAY_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_CLOSED_CAPTIONS_INTENT_WITH_TRUE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_CLOSED_CAPTIONS_INTENT_WITH_TRUE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_CLOSED_CAPTIONS_INTENT_WITH_FALSE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_CLOSED_CAPTIONS_INTENT_WITH_TRUE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_VOICE_GUIDANCE_INTENT_WITH_TRUE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_VOICE_GUIDANCE_INTENT_WITH_TRUE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_VOICE_GUIDANCE_INTENT_WITH_FALSE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_VOICE_GUIDANCE_INTENT_WITH_FALSE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_VOICE_GUIDANCE_INTENT_WITH_SPEED_2": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_VOICE_GUIDANCE_INTENT_WITH_SPEED_2_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_VOICE_GUIDANCE_INTENT_WITH_SPEED_-1_AND_RELATIVE_TRUE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_VOICE_GUIDANCE_INTENT_WITH_SPEED_-1_AND_RELATIVE_TRUE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_VOICE_GUIDANCE_INTENT_WITH_TRUE_AND_VERBOSITY_LOW": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_VOICE_GUIDANCE_INTENT_WITH_TRUE_AND_VERBOSITY_LOW_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_VOICE_GUIDANCE_INTENT_WITH_TRUE_AND_VERBOSITY_HIGH": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_VOICE_GUIDANCE_INTENT_WITH_TRUE_AND_VERBOSITY_HIGH_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_AUDIO_DESCRITIONS_INTENT_WITH_TRUE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_AUDIO_DESCRITIONS_INTENT_WITH_TRUE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_AUDIO_DESCRITIONS_INTENT_WITH_FALSE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_AUDIO_DESCRITIONS_INTENT_WITH_FALSE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_HIGH_CONTRAST_INTENT_WITH_HIGH_CONTRAST_MODE_ON": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_HIGH_CONTRAST_INTENT_WITH_HIGH_CONTRAST_MODE_ON_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_HIGH_CONTRAST_INTENT_WITH_HIGH_CONTRAST_MODE_OFF": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_HIGH_CONTRAST_INTENT_WITH_HIGH_CONTRAST_MODE_OFF_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCREEN_MAGNIFICATION_INTENT_WITH_SCREEN_MAGNIFICATION_TURNED_ON": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCREEN_MAGNIFICATION_INTENT_WITH_SCREEN_MAGNIFICATION_TURNED_ON_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCREEN_MAGNIFICATION_INTENT_WITH_SCREEN_MAGNIFICATION_TURNED_OFF": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCREEN_MAGNIFICATION_INTENT_WITH_SCREEN_MAGNIFICATION_TURNED_OFF_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCREEN_MAGNIFICATION_INTENT_WITH_MAGNIFICATION_SCALE_2.5": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCREEN_MAGNIFICATION_INTENT_WITH_MAGNIFICATION_SCALE_2.5_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_FOCUS_INTENT_CURSOR_UP": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_FOCUS_INTENT_CURSOR_UP_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_FOCUS_INTENT_CURSOR_DOWN": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_FOCUS_INTENT_CURSOR_DOWN_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_FOCUS_INTENT_CURSOR_LEFT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_FOCUS_INTENT_CURSOR_LEFT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_FOCUS_INTENT_CURSOR_RIGHT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_FOCUS_INTENT_CURSOR_RIGHT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SELECT_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SELECT_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_UP_WITH_UNIT_PAGE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCROLL_INTENT_UP_WITH_UNIT_PAGE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_DOWN_WITH_UNIT_PAGE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCROLL_INTENT_DOWN_WITH_UNIT_PAGE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_LEFT_WITH_UNIT_PAGE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCROLL_INTENT_LEFT_WITH_UNIT_PAGE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_RIGHT_WITH_UNIT_PAGE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCROLL_INTENT_RIGHT_WITH_UNIT_PAGE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_UP_WITH_UNIT_LINE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCROLL_INTENT_UP_WITH_UNIT_LINE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_DOWN_WITH_UNIT_LINE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCROLL_INTENT_DOWN_WITH_UNIT_LINE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_LEFT_WITH_UNIT_LINE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCROLL_INTENT_LEFT_WITH_UNIT_LINE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_RIGHT_WITH_UNIT_LINE": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_SCROLL_INTENT_RIGHT_WITH_UNIT_LINE_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_UP_WITH_UNIT_PERCENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_CROLL_INTENT_UP_WITH_UNIT_PERCENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_DOWN_WITH_UNIT_PERCENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_CROLL_INTENT_DOWN_WITH_UNIT_PERCENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_LEFT_WITH_UNIT_PERCENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_CROLL_INTENT_LEFT_WITH_UNIT_PERCENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_SCROLL_INTENT_RIGHT_WITH_UNIT_PERCENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_CROLL_INTENT_RIGHT_WITH_UNIT_PERCENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_BACK_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_BACK_INTENT_CONTENT"
+    },
+    "ONNAVIGATETO_WITH_EXIT_INTENT": {
+        "event": "discovery.onNavigateTo",
+        "validationJsonPath": "eventResponse",
+        "expected": "DISCOVERYLAUNCH_EXIT_INTENT_CONTENT"
     }
 }
+
