--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.2.0",
     "multiple-cucumber-html-reporter": "^2.0.0",
+    "setimmediate": "^1.0.5",
     "shell-exec": "1.0.2",
     "uuid": "^8.3.1",
-    "winston": "^3.8.2"
+    "winston": "3.8.2"
   },
   "devDependencies": {
     "babel-jest": "^27.4.5",
