--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cucumber-json-report-formatter": "^0.1.4",
     "cypress": "^12.0.0",
     "esbuild": "^0.17.0",
+    "flatted": "^3.3.1",
     "jsdom": "^24.0.0",
     "json-merger": "1.1.10",
     "jsonpath": "^1.1.1",
