--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "cy:run": "node ./Scripts/checkDefaultConfig.js && yarn cache clean && bash ./Scripts/run.sh run",
     "softRefresh": "yarn install && yarn upgrade",
     "hardRefresh": "rm -rf node_modules && yarn cache clean && yarn softRefresh",
-    "copyReportTemplate": "node ./Scripts/copyReportTemplate.js",
+    "copyCukeReportTemplate": "node ./Scripts/copyCukeReportTemplate.js",
     "copyExternalConfigData": "node ./Scripts/copyExternalConfigData.js",
     "applyDependencyOverrides": "node ./Scripts/applyDependencyOverrides.js",
-    "setup": "npm run copyExternalConfigData && npm run applyDependencyOverrides && npm run copyReportTemplate",
+    "setup": "npm run copyExternalConfigData && npm run applyDependencyOverrides && npm run copyCukeReportTemplate",
     "postinstall": "npm run setup",
     "format": "prettier --write \"**/*.js\"",
     "lint": "eslint .",
@@ -46,9 +46,10 @@
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.2.0",
     "multiple-cucumber-html-reporter": "^2.0.0",
+    "setimmediate": "^1.0.5",
     "shell-exec": "1.0.2",
     "uuid": "^8.3.1",
-    "winston": "^3.8.2"
+    "winston": "3.8.2"
   },
   "devDependencies": {
     "babel-jest": "^27.4.5",
