WIP: Compile v2 json from js objects

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ cypress/TestCases/Distributor
 # External Testdata
 cypress/fixtures/external
 
+# Firebolt Calls Test Data
+cypress/fixtures/fireboltCalls/index.js
+# To be removed below
+cypress/fixtures/fireboltCallsJS/index.js
+
 # Lock Files
 yarn.lock
 
