--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.2.0",
     "multiple-cucumber-html-reporter": "^2.0.0",
+    "regex-parser": "^2.3.0",
     "setimmediate": "^1.0.5",
     "shell-exec": "1.0.2",
     "uuid": "^8.3.1",
