Addded the script to package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "copyCukeReportTemplate": "node ./Scripts/copyCukeReportTemplate.js",
     "copyExternalConfigData": "node ./Scripts/copyExternalConfigData.js",
     "applyDependencyOverrides": "node ./Scripts/applyDependencyOverrides.js",
+    "restoreDependencyOverrides": "node ./Scripts/restoreDependencyOverrides.js",
     "setup": "npm run copyExternalConfigData && npm run applyDependencyOverrides && npm run copyCukeReportTemplate",
     "postinstall": "npm run setup",
     "format": "prettier --write \"**/*.js\"",
