combine v2 fireboltcalls with v1

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ cypress/TestCases/Distributor
 # External Testdata
 cypress/fixtures/external
 
+# Firebolt Calls Test Data
+cypress/fixtures/fireboltCalls/index.js
+
 # Lock Files
 yarn.lock
 
