Dev to Master Merge 7/03 (#142)
* porting hdmiInput TCs

* Review comment address

* FIRECERT-2025-call updateresponse for third party and pass sdkversion via cli

* FIRECERT-2025-lint fix

* FIRECERT-2025-lint fix

* Key values for thunderproxy test scenarios

* modulereqID for thunderproxy testcases

* Linting issue fix

* 2068 - pending TCs

* FIRECERT-2025-fcs side schema changes

* FIRECERT-2025-lint fix

* 2068 -add  setter validation

* minor changes

* FIRECERT-2025-lifecycle schema migration

* FIRECERT-2075-New Improve lifecycle event validation reliability

* FIRECERT-2025-coverity fix

* FIRECERT-2025-lint fix

* FIRECERT-2025-lint fix

* FIRECERT-2025-lint fix

* corrected device validation key

* FIRECERT-2025-test fix1

* FIRECERT-2025-test fix 2

* FIRECERT-2025-test fix 3

* FIRECERT-2025-test fix4

* FIRECERT-2025-test fix5

* FIRECERT-2025-addressed comments

* FIRECERT-2025-addressed comments

* FIRECERT-2025-test fix

* FIRECERT-2025-test fix

* FIRECERT-2025-test fix

* FIRECERT-2025-test fix

* FIRECERT-2025-test fix

* FIRECERT-2075-New addressed review comments in lifecycle.js

* FIRECERT-2075-New reverted the existing changes and updated as per review comments

* FIRECERT-2075-New reverted the existing changes and updated as per review comments

* FIRECERT-1819: Added userinterest feature file and params

* FIRECERT-2075 Addressed review comments

* FIRECERT-2068 - retain thunderProxy TCs to FCS

* lint error

* Added comment for thunderproxy scenarios

* FIRECERT-2068 addressed review comments

* FIRECERT-2075-New updated with dev and addressed review comments

* FIRECERT-2075-New updated with dev

* FIRECERT-2075-New fixed lint issues

* FIRECERT-2075-New addressed review comments

* FIRECERT-2075-New updated history validation log in utils.js

* update to dummy value

* Testcase corrections

* FIRECERT-2075-New addressed review comments

* F

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ cypress/TestCases/Distributor
 # External Testdata
 cypress/fixtures/external
 
+# Firebolt Calls Test Data
+cypress/fixtures/fireboltCalls/index.js
+
+# Firebolt Mock Test Data
+cypress/fixtures/fireboltMocks/index.js
+
 # Lock Files
 yarn.lock
 
