--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Firebolt Certification Test Suite",
   "main": "index.js",
   "scripts": {
-    "cy:open": "node ./Scripts/checkDefaultConfig.js && yarn cache clean && sh ./Scripts/run.sh open",
-    "cy:run": "node ./Scripts/checkDefaultConfig.js && yarn cache clean && bash ./Scripts/run.sh run",
+    "cy:open": "node ./Scripts/checkDefaultConfig.js && yarn cache clean && node ./Scripts/run.js open",
+    "cy:run": "node ./Scripts/checkDefaultConfig.js && yarn cache clean && node ./Scripts/run.js run",
     "softRefresh": "yarn install && yarn upgrade",
     "hardRefresh": "rm -rf node_modules && yarn cache clean && yarn softRefresh",
     "copyCukeReportTemplate": "node ./Scripts/copyCukeReportTemplate.js",
@@ -30,8 +30,9 @@
     "@firebolt-js/manage-sdk": "1.0.0",
     "@firebolt-js/sdk": "1.0.0",
     "axios": "^1.3.4",
-    "configModule": "./defaultModule",
-    "cucumber-json-report-formatter": "^0.1.4",
+    "configModule": "git+ssh://git@github.com-ghec:comcast-firebolt/xumo-remote-config-module",
+    "cross-spawn": "^7.0.3",
+    "cucumber-json-report-formatter": "git+ssh://git@github.com-ghec:comcast-firebolt/cucumber-json-report-formatter.git",
     "cypress": "^12.0.0",
     "esbuild": "^0.17.0",
     "flatted": "^3.3.1",
