--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@firebolt-js/manage-sdk": "1.0.0",
     "@firebolt-js/sdk": "1.0.0",
     "axios": "^1.3.4",
-    "configModule": "git+ssh://git@github.com-ghec:comcast-firebolt/xumo-remote-config-module",
+    "configModule": "./defaultModule",
+    "cucumber-json-report-formatter": "^0.1.4",
     "cross-spawn": "^7.0.3",
-    "cucumber-json-report-formatter": "git+ssh://git@github.com-ghec:comcast-firebolt/cucumber-json-report-formatter.git",
     "cypress": "^12.0.0",
     "esbuild": "^0.17.0",
     "flatted": "^3.3.1",
