--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,17 +12,16 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          fetch-depth: 0
-          repo-token: ${{ secrets.SEMANTIC_RELEASE_BOT_PAT }}
-          persist-credentials: false
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 'lts/*'
+          node-version: ${{ matrix.node-version }}
       - name: Set explicit npm dist-tag default
         if: github.ref_name == 'main'
         run: echo "NPM_DIST_TAG=latest" >> $GITHUB_ENV
@@ -30,10 +29,9 @@ jobs:
         if: github.ref_name != 'main'
         run: echo "NPM_DIST_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
       - name: Install dependencies
-        run: npm ci
-      - name: Release to GitHub and NPM
+        run: yarn install
+      - name: Release to GitHub
         env:
-          GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_BOT_PAT }} # <-- Allows semantic-release-bot to push changes to protected branches
-          NPM_TOKEN: ${{ secrets.SEMANTIC_RELEASE_NPM_TOKEN  }} # <-- Allows semantic-release to publish to npm without 2 factor auth.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # <-- Allows semantic-release-bot to push changes to protected branches
           npm_config_tag: ${{ env.NPM_DIST_TAG }} # <-- For main, this is `latest.` Otherwise, `dev`, `next-major`, etc. See ./.releaserc for release branch config.
         run: npx semantic-release
