--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          repo-token: ${{ secrets.SEMANTIC_RELEASE_BOT_PAT }}
+          persist-credentials: false
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
@@ -32,6 +34,6 @@ jobs:
         run: yarn install
       - name: Release to GitHub
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # <-- Allows semantic-release-bot to push changes to protected branches
+          GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_BOT_PAT }} # <-- Allows semantic-release-bot to push changes to protected branches
           npm_config_tag: ${{ env.NPM_DIST_TAG }} # <-- For main, this is `latest.` Otherwise, `dev`, `next-major`, etc. See ./.releaserc for release branch config.
         run: npx semantic-release
