--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -45,6 +45,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Fetch changes in main
+        uses: ./.github/actions/fetch-latest-main
       - name: Install dependencies
         run: yarn install
       - name: Release to GitHub
@@ -70,8 +72,9 @@ jobs:
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ secrets.GITHUB_EMAIL }}"
 
-      - name: Checkout main branch
-        run: git checkout main
+      
+      - name: Fetch changes in main
+        uses: ./.github/actions/fetch-latest-main
 
       - name: Merge main into dev
         run: |
